Expanding the list of skills to demonstrate.

--- a/01-fundamentals-of-html.html
+++ b/01-fundamentals-of-html.html
@@ -9,4 +9,8 @@ Demonstrates the following:
 1. HTML Structure
 2. Headings
 3. Attributes
+4. Displaying Text (<p>, <span>)
+5. Styling Text (<em>, <strong>)
+6. Line breaks
+7. Lists (ordered, unordered)
 -->
