Added all the items I need to demonstrate.

--- a/01-fundamentals-of-html.html
+++ b/01-fundamentals-of-html.html
@@ -13,4 +13,6 @@ Demonstrates the following:
 5. Styling Text (<em>, <strong>)
 6. Line breaks
 7. Lists (ordered, unordered)
+8. Images (with Alts)
+9. Videos
 -->
