Added the head element.

--- a/01-fundamentals-of-html.html
+++ b/01-fundamentals-of-html.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <!-- Above lets the browser know we're using HTML5 -->
-<body>
-  <h1>Fundamentals of HTML</h1>
-  <div>
-    <p>This is a child of DIV and grandchild of BODY</p>
-  </div>
-</body>
-<!-- 
+<html>
+  <head>
+    <!-- The head element holds the metadata about the page -->
+  </head>
+  <body>
+    <!-- The body element holds the visible markup -->
+    <h1>Fundamentals of HTML</h1>
+    <div>
+      <p>This is a child of DIV and grandchild of BODY</p>
+    </div>
+  </body>  
+</html>
+<!--
 Demonstrates the following:
 1. HTML Structure
 2. Headings
