Added a title to the page.

--- a/01-fundamentals-of-html.html
+++ b/01-fundamentals-of-html.html
@@ -3,12 +3,13 @@
 <html>
   <head>
     <!-- The head element holds the metadata about the page -->
+    <title>Integer lectus enim</title>
   </head>
   <body>
     <!-- The body element holds the visible markup -->
-    <h1>Fundamentals of HTML</h1>
+    <h1>Ultrices Mi Tempus</h1>
     <div>
-      <p>This is a child of DIV and grandchild of BODY</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
     </div>
   </body>  
 </html>
