--- a/01-fundamentals-of-html.html
+++ b/01-fundamentals-of-html.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <!-- The head element holds the metadata about the page -->
-    <title>Integer lectus enim</title>
+    <title>Integer Lectus Enim</title>
   </head>
   <body>
     <!-- The body element holds the visible markup -->
@@ -11,11 +11,12 @@
     <div>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
     </div>
+    <a href="./README.md">Test</a>
   </body>  
 </html>
 <!--
 Demonstrates the following:
-1. HTML Structure
+1. HTML Structure (html, head, body)
 2. Headings
 3. Attributes
 4. Displaying Text (<p>, <span>)
@@ -24,4 +25,5 @@ Demonstrates the following:
 7. Lists (ordered, unordered)
 8. Images (with Alts)
 9. Videos
+10. Anchor tags (target attribute, relative pages)
 -->
