--- a/01-fundamentals-of-html.html
+++ b/01-fundamentals-of-html.html
@@ -12,6 +12,8 @@
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
     </div>
     <a href="./README.md">Test</a>
+    <br>
+    <a href="./assets/oceans.mp4">Video</a>
   </body>  
 </html>
 <!--
