Added more items to show.

--- a/01-fundamentals-of-html.html
+++ b/01-fundamentals-of-html.html
@@ -18,14 +18,28 @@
 </html>
 <!--
 Demonstrates the following:
-1. HTML Structure (html, head, body)
+1. HTML Structure
+   - html
+   - head
+   - body
 2. Headings
 3. Attributes
-4. Displaying Text (<p>, <span>)
-5. Styling Text (<em>, <strong>)
+4. Displaying Text
+    - <p>
+    - <span>
+5. Styling Text
+  - <em>
+  - <strong>
 6. Line breaks
-7. Lists (ordered, unordered)
-8. Images (with Alts)
+7. Lists
+  - ordered
+  - unordered
+8. Images 
+  - Alt attribute
 9. Videos
-10. Anchor tags (target attribute, relative pages)
+10. Anchor tags
+  - target attribute
+  - relative links
+  - links that aren't text
+  - linking within a page
 -->
