Starting the demonstration.

--- a/01-fundamentals-of-html.html
+++ b/01-fundamentals-of-html.html
@@ -9,11 +9,14 @@
     <!-- The body element holds the visible markup -->
     <h1>Ultrices Mi Tempus</h1>
     <div>
+      <h2>Tincidunt Tellus</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
     </div>
-    <a href="./README.md">Test</a>
-    <br>
-    <a href="./assets/oceans.mp4">Video</a>
+    <div>
+      <a href="./README.md">Test</a>
+      <br>
+      <a href="./assets/oceans.mp4">Video</a>
+    </div>
   </body>  
 </html>
 <!--
