--- a/01-fundamentals-of-html.html
+++ b/01-fundamentals-of-html.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <!-- The body element holds the visible markup -->
-    <h1>Ultrices Mi Tempus</h1>
+    <h1 id="top">Ultrices Mi Tempus</h1>
     <div>
       <h2>Tincidunt Tellus</h2>
       <p>Suspendisse rhoncus sollicitudin vehicula. Nulla pulvinar massa dui, sit amet dapibus metus pharetra sit amet. Proin purus ex, consequat vitae risus in, dapibus posuere neque. Nulla interdum, dolor a eleifend aliquet, massa orci mollis felis, sit amet faucibus eros erat a ante. Etiam consequat ligula velit, vitae imperdiet nisi ornare eget. Aliquam non mollis lorem. Maecenas eget rhoncus nibh. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Maecenas semper purus et quam porttitor, at venenatis quam tincidunt. Sed erat nibh, lobortis in purus nec, pretium auctor arcu.</p>
@@ -19,9 +19,14 @@
       <p>Donec in tempor tortor. Aliquam erat volutpat. Ut ultricies lectus sed dictum malesuada. In molestie purus eu augue pellentesque placerat. Nullam gravida ac massa sed pellentesque. Fusce id ultricies metus. Vivamus non eros consectetur est cursus tristique.</p>
     </div>
     <div>
-      <a href="./README.md">Test</a>
+      <h2>Media Nullam</h2>
+      <video src="./assets/oceans.mp4" width="500px" controls></video>
+      <br>
+      <a href="./README.md">Typographe</a>
       <br>
       <a href="./assets/oceans.mp4">Video</a>
+      <br>
+      <a href="#top">Top</a>
     </div>
   </body>  
 </html>
