--- a/01-fundamentals-of-html.html
+++ b/01-fundamentals-of-html.html
@@ -36,32 +36,6 @@
       <br>
       <a href="#top"><strong><em>Top</em></strong></a>
     </div>
-  </body>  
+  </body>
+  <table></table>
 </html>
-<!--
-Demonstrates the following:
-1. HTML Structure
-   - html
-   - head
-   - body
-2. Headings
-3. Attributes
-4. Displaying Text
-    - <p>
-    - <span>
-5. Styling Text
-  - <em>
-  - <strong>
-6. Line breaks
-7. Lists
-  - ordered
-  - unordered
-8. Images 
-  - Alt attribute
-9. Videos
-10. Anchor tags
-  - target attribute
-  - relative links
-  - links that aren't text
-  - linking within a page
--->
