--- a/01-fundamentals-of-html.html
+++ b/01-fundamentals-of-html.html
@@ -10,10 +10,10 @@
     <header>
       <nav>
         <ul>
-          <li>Tincidunt Tellus</li>
-          <li>Proin A Massa</li>
-          <li>Media Nullam</li>
-          <li>Mensam regulis</li>
+          <li><a href="#a">Tincidunt Tellus</a></li>
+          <li><a href="#b">Proin A Massa</a></li>
+          <li><a href="#c">Media Nullam</a></li>
+          <li><a href="#d">Mensam regulis</a></li>
         </ul>
       </nav>
     </header>
@@ -27,21 +27,21 @@
         <h1>Ultrices Mi Tempus</h1>
       </div>
     
-      <div>
+      <div id="a">
         <h2>Tincidunt Tellus</h2>
         <img src="https://images.pexels.com/photos/36487/above-adventure-aerial-air.jpg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Sed dictum malesuada" width="500">
         <p>Suspendisse rhoncus sollicitudin vehicula. Nulla pulvinar massa dui, sit amet dapibus metus pharetra sit amet. Proin purus ex, consequat vitae risus in, dapibus posuere neque. Nulla interdum, dolor a eleifend aliquet, massa orci mollis felis, sit amet faucibus eros erat a ante. Etiam consequat ligula velit, vitae imperdiet nisi ornare eget. Aliquam non mollis lorem. Maecenas eget rhoncus nibh. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Maecenas semper purus et quam porttitor, at venenatis quam tincidunt. Sed erat nibh, lobortis in purus nec, pretium auctor arcu.</p>
         <p>Proin vel <strong>et elit</strong> ornare congue. Pellentesque interdum a nisl vitae pretium. Morbi bibendum, neque gravida euismod semper, mi dui fermentum ante, vel rhoncus lorem leo eget lectus. Proin nec suscipit mi. Suspendisse enim dui, fermentum eu massa at, cursus finibus lacus. Mauris fermentum mollis cursus. Nulla tristique est non nulla mattis varius. Vestibulum nec tristique diam.</p>
       </div>
   
-      <div>
+      <div id="b">
         <h2>Proin A Massa</h2>
         <img src="https://images.pexels.com/photos/462162/pexels-photo-462162.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="In tempor tortor" width="500">
         <p>Nunc finibus sem eros, sed laoreet tellus fermentum ac. Suspendisse consectetur aliquet posuere. Proin a ornare sem. Sed eleifend massa et sem sollicitudin faucibus ac quis quam. Curabitur vitae mauris vel nisl iaculis scelerisque. Donec lobortis fermentum ante id lacinia. Vivamus lectus nisi, fermentum non finibus vitae, sagittis at magna.</p>
         <p>Donec in tempor tortor. Aliquam erat volutpat. Ut ultricies lectus sed dictum malesuada. In molestie purus eu augue pellentesque placerat. Nullam gravida ac massa sed pellentesque. Fusce id ultricies metus. Vivamus non eros consectetur est cursus tristique.</p>
       </div>
   
-      <div>
+      <div id="c">
         <h2>Media Nullam</h2>
         <ul>
           <li>Auctor gravida</li>
@@ -55,7 +55,7 @@
         <a href="#top"><strong><em>Top</em></strong></a>
       </div>
   
-      <div id="table">
+      <div id="d">
         <h2>Mensam regulis</h2>
         <table>
           <thead>
