Added an audio player.

--- a/01-fundamentals-of-html.html
+++ b/01-fundamentals-of-html.html
@@ -53,6 +53,9 @@
             <li>Dui dapibus</li>
           </ul>
           <video src="./assets/oceans.mp4" width="500" controls></video>
+          <aside>
+            <p>Vestibulum finibus mauris id mauris pretium consequat.</p>
+          </aside>
           <br>
           <a href="./README.md">Typographe</a>
           <br>
@@ -103,7 +106,7 @@
     </main>
 
     <footer>
-
+      <audio src="https://content.codecademy.com/courses/Semantic%20HTML/nyc-sounds.mov" controls></audio>
     </footer>
   </body>
 
