Added footer information.

--- a/01-fundamentals-of-html.html
+++ b/01-fundamentals-of-html.html
@@ -106,6 +106,8 @@
     </main>
 
     <footer>
+      <span>Fusce id ultricies metus. Vivamus non eros consectetur est cursus tristique.</span>
+      <br>
       <audio src="https://content.codecademy.com/courses/Semantic%20HTML/nyc-sounds.mov" controls></audio>
     </footer>
   </body>
