Fixed relative paths.

--- a/01-fundamentals-of-html/index.html
+++ b/01-fundamentals-of-html/index.html
@@ -52,12 +52,12 @@
             <li>Faucibus pellentesque</li>
             <li>Dui dapibus</li>
           </ul>
-          <video src="./assets/oceans.mp4" width="500" controls></video>
+          <video src="../assets/oceans.mp4" width="500" controls></video>
           <aside>
             <p>Vestibulum finibus mauris id mauris pretium consequat.</p>
           </aside>
           <br>
-          <a href="./README.md">Typographe</a>
+          <a href="../README.md">Typographe</a>
           <br>
           <a href="#top"><strong><em>Top</em></strong></a>
         </section>
