Added some examples of using selectors.

--- a/02-fundamentals-of-css/index.html
+++ b/02-fundamentals-of-css/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Inferi</h1>
+    <h1 class="grey">Inferi</h1>
+    <p class="grey reddish">Suspendisse pellentesque purus nec odio tempor, vel lobortis lorem auctor. Proin lacinia blandit elit a placerat.</p>
   </body>
 </html>
