Added the ID selector as an example.

--- a/02-fundamentals-of-css/index.html
+++ b/02-fundamentals-of-css/index.html
@@ -9,5 +9,6 @@
   <body>
     <h1 class="grey">Inferi</h1>
     <p class="grey reddish">Suspendisse pellentesque purus nec odio tempor, vel lobortis lorem auctor. Proin lacinia blandit elit a placerat.</p>
+    <p id="example">Integer eu gravida dolor, non mollis nibh.</p>
   </body>
 </html>
