Added Attribute selectors.

--- a/02-fundamentals-of-css/index.html
+++ b/02-fundamentals-of-css/index.html
@@ -10,5 +10,7 @@
     <h1 class="grey">Inferi</h1>
     <p class="grey reddish">Suspendisse pellentesque purus nec odio tempor, vel lobortis lorem auctor. Proin lacinia blandit elit a placerat.</p>
     <p id="example">Integer eu gravida dolor, non mollis nibh.</p>
+    <img src="https://images.pexels.com/photos/6307488/pexels-photo-6307488.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="erupt">
+    <img src="https://images.pexels.com/photos/1687530/pexels-photo-1687530.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="flow">
   </body>
 </html>
