--- a/02-fundamentals-of-css/index.html
+++ b/02-fundamentals-of-css/index.html
@@ -9,7 +9,9 @@
   <body>
     <h1 class="grey">Inferi</h1>
     <p class="grey reddish">Suspendisse pellentesque purus nec odio tempor, vel lobortis lorem auctor. Proin lacinia blandit elit a placerat.</p>
-    <p id="example">Integer eu gravida dolor, non mollis nibh.</p>
+    <p id="example" class="paras">Integer eu gravida dolor, non mollis nibh.</p>
+    <p id="pinkish" class="paras">Donec in tempor tortor. Aliquam erat volutpat. Ut ultricies lectus sed dictum malesuada. In molestie purus eu augue pellentesque placerat. Nullam gravida ac massa sed pellentesque. Fusce id ultricies metus. Vivamus non eros consectetur est cursus tristique.</p>
+    <p class="paras">Quisque ipsum mi, ultricies quis lectus et, tempus iaculis nunc. Maecenas lacinia porta augue sit amet laoreet. Etiam lectus metus, rutrum eu velit non, auctor feugiat ante. Etiam nulla erat, porta eget lacinia at, interdum mollis libero. Cras non euismod risus. Aenean urna nisl, tincidunt nec auctor id, sodales nec sapien. Integer eu gravida dolor, non mollis nibh.</p>
     <img src="https://images.pexels.com/photos/6307488/pexels-photo-6307488.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="erupt">
     <img src="https://images.pexels.com/photos/1687530/pexels-photo-1687530.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="flow">
   </body>
