Added more comments and prepared to demonstrate the descendant combinator.

--- a/02-fundamentals-of-css/index.html
+++ b/02-fundamentals-of-css/index.html
@@ -14,5 +14,8 @@
     <p class="paras">Quisque ipsum mi, ultricies quis lectus et, tempus iaculis nunc. Maecenas lacinia porta augue sit amet laoreet. Etiam lectus metus, rutrum eu velit non, auctor feugiat ante. Etiam nulla erat, porta eget lacinia at, interdum mollis libero. Cras non euismod risus. Aenean urna nisl, tincidunt nec auctor id, sodales nec sapien. Integer eu gravida dolor, non mollis nibh.</p>
     <img src="https://images.pexels.com/photos/6307488/pexels-photo-6307488.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="erupt">
     <img src="https://images.pexels.com/photos/1687530/pexels-photo-1687530.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="flow">
+    <section id="big">
+      <p>Aenean quis mauris tortor. Donec sagittis nunc in dolor auctor, eu feugiat orci convallis. Nulla id imperdiet eros, nec dapibus magna. Maecenas porttitor augue eu tortor imperdiet feugiat id ac lorem. Donec convallis augue lectus, ut auctor erat tristique iaculis. Maecenas ut enim nec tortor suscipit tempus. Aenean sodales eros in mauris porttitor, vel lobortis ipsum aliquet. Proin tincidunt lacus ut dui commodo accumsan. Donec ut mi in nulla vehicula viverra.</p>
+    </section>
   </body>
 </html>
