--- a/02-fundamentals-of-css/index.html
+++ b/02-fundamentals-of-css/index.html
@@ -16,6 +16,7 @@
     <img src="https://images.pexels.com/photos/1687530/pexels-photo-1687530.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="flow">
     <section id="big">
       <p>Aenean quis mauris tortor. Donec sagittis nunc in dolor auctor, eu feugiat orci convallis. Nulla id imperdiet eros, nec dapibus magna. Maecenas porttitor augue eu tortor imperdiet feugiat id ac lorem. Donec convallis augue lectus, ut auctor erat tristique iaculis. Maecenas ut enim nec tortor suscipit tempus. Aenean sodales eros in mauris porttitor, vel lobortis ipsum aliquet. Proin tincidunt lacus ut dui commodo accumsan. Donec ut mi in nulla vehicula viverra.</p>
+      <p>Praesent sed lectus tortor. Pellentesque at condimentum ligula. Mauris lobortis purus ac tellus sollicitudin, a imperdiet ligula ultrices. Morbi non libero ex. Sed turpis felis, pharetra at pellentesque quis, cursus et risus. Vestibulum sit amet nunc in nisi venenatis bibendum. Donec quis libero mauris. Suspendisse aliquet scelerisque neque, sed vulputate nunc venenatis vel. Donec pretium sed purus quis gravida.</p>
     </section>
   </body>
 </html>
