Added additional demonstrations of specifity.

--- a/02-fundamentals-of-css/index.html
+++ b/02-fundamentals-of-css/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <h1 class="grey">Inferi</h1>
+    <h4>Romulus</h4>
     <p class="grey reddish">Suspendisse pellentesque purus nec odio tempor, vel lobortis lorem auctor. Proin lacinia blandit elit a placerat.</p>
     <p id="example" class="paras">Integer eu gravida dolor, non mollis nibh.</p>
     <p id="pinkish" class="paras">Donec in tempor tortor. Aliquam erat volutpat. Ut ultricies lectus sed dictum malesuada. In molestie purus eu augue pellentesque placerat. Nullam gravida ac massa sed pellentesque. Fusce id ultricies metus. Vivamus non eros consectetur est cursus tristique.</p>
@@ -17,6 +18,10 @@
     <section id="big">
       <p>Aenean quis mauris tortor. Donec sagittis nunc in dolor auctor, eu feugiat orci convallis. Nulla id imperdiet eros, nec dapibus magna. Maecenas porttitor augue eu tortor imperdiet feugiat id ac lorem. Donec convallis augue lectus, ut auctor erat tristique iaculis. Maecenas ut enim nec tortor suscipit tempus. Aenean sodales eros in mauris porttitor, vel lobortis ipsum aliquet. Proin tincidunt lacus ut dui commodo accumsan. Donec ut mi in nulla vehicula viverra.</p>
       <p>Praesent sed lectus tortor. Pellentesque at condimentum ligula. Mauris lobortis purus ac tellus sollicitudin, a imperdiet ligula ultrices. Morbi non libero ex. Sed turpis felis, pharetra at pellentesque quis, cursus et risus. Vestibulum sit amet nunc in nisi venenatis bibendum. Donec quis libero mauris. Suspendisse aliquet scelerisque neque, sed vulputate nunc venenatis vel. Donec pretium sed purus quis gravida.</p>
+      <ul>
+        <li><h4>Alpha</h4></li>
+        <li><h4>Omega</h4></li>
+      </ul>
     </section>
   </body>
 </html>
