Added CSS to demonstrate box model

--- a/02-fundamentals-of-css/index.html
+++ b/02-fundamentals-of-css/index.html
@@ -23,5 +23,10 @@
         <li><h4>Omega</h4></li>
       </ul>
     </section>
+    <article id="box-model">
+      <section id="box">
+        <p>Content</p>
+      </section>
+    </article>
   </body>
 </html>
