--- a/02. Fundamentals of CSS/b. Display, Position/index.html
+++ b/02. Fundamentals of CSS/b. Display, Position/index.html
@@ -10,5 +10,8 @@
     <div class="box"></div>
     <div class="box"></div>
     <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
   </body>
 </html>
