--- a/02. Fundamentals of CSS/b. Display, Position/index.html
+++ b/02. Fundamentals of CSS/b. Display, Position/index.html
@@ -12,6 +12,6 @@
     <div class="box"></div>
     <div class="box"></div>
     <div class="box"></div>
-    <div class="box"></div>
+    <!-- <div class="box"></div> -->
   </body>
 </html>
