Added a demonstration of display inline.

--- a/02. Fundamentals of CSS/b. Display, Position/index.html
+++ b/02. Fundamentals of CSS/b. Display, Position/index.html
@@ -12,6 +12,8 @@
     <div class="box"></div>
     <div class="box"></div>
     <div class="box"></div>
-    <!-- <div class="box"></div> -->
+    <span>E pluribus unum</span>
+    <span>E pluribus unum</span>
+    <span>E pluribus unum</span>
   </body>
 </html>
