--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="resources/css/presets.css">
+    <link rel="stylesheet" href="resources/css/format.css">
+    <link rel="stylesheet" href="resources/css/decor.css">
     <link rel="icon" href="scaffolding.png">
     <title>Scaffold</title>
   </head>
