Formatting in progress.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="resources/css/presets.css">
     <link rel="stylesheet" href="resources/css/format.css">
     <link rel="stylesheet" href="resources/css/decor.css">
-    <link rel="icon" href="scaffolding.png">
+    <link rel="icon" href="resources/assets/scaffolding.png">
     <title>Scaffold</title>
   </head>
   <body>
