Added a skeleton for the breadcrumbs.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,18 @@
     <title>Scaffold</title>
   </head>
   <body>
-    <article></article>
-    <article></article>
+    <!-- <article></article> -->
+    <article>
+      <ul class="breadcrumb">
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
+      </ul>
+      <ul class="breadcrumb">
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
+      </ul>
+    </article>
   </body>
 </html>
