Added text to each list item.

--- a/index.html
+++ b/index.html
@@ -13,14 +13,16 @@
     <!-- <article></article> -->
     <article>
       <ul class="breadcrumb">
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
+        <li><a href="#">Clothing</a></li>
+        <li><a href="#">Tops</a></li>
+        <li><a href="#">Jackets</a></li>
+        <li><a href="#">Red</a></li>
       </ul>
       <ul class="breadcrumb">
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
+        <li><a href="#">Clothing</a></li>
+        <li><a href="#">Tops</a></li>
+        <li><a href="#">Jackets</a></li>
+        <li><a href="#">Red</a></li>
       </ul>
     </article>
   </body>
