Fixed states of the breadcrumb links.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- <article></article> -->
     <article>
       <ul class="breadcrumb">
-        <li><a href="#">Clothing</a></li>
+        <li><a href="#" target="_blank">Clothing</a></li>
         <li><a href="#">Tops</a></li>
         <li><a href="#">Jackets</a></li>
         <li><a href="#">Red</a></li>
