Removed the styled breadcrumb because I am tired.

--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="resources/css/presets.css">
-    <link rel="stylesheet" href="resources/css/format.css">
-    <link rel="stylesheet" href="resources/css/decor.css">
+    <link rel="stylesheet" href="resources/css/breadcrumbs.css">
     <link rel="icon" href="resources/assets/scaffolding.png">
     <title>Scaffold</title>
   </head>
@@ -14,12 +13,6 @@
     <article>
       <ul class="breadcrumb">
         <li><a href="#" target="_blank">Clothing</a></li>
-        <li><a href="#">Tops</a></li>
-        <li><a href="#">Jackets</a></li>
-        <li><a href="#">Red</a></li>
-      </ul>
-      <ul class="breadcrumb styled">
-        <li><a href="#">Clothing</a></li>
         <li><a href="#">Tops</a></li>
         <li><a href="#">Jackets</a></li>
         <li><a href="#">Red</a></li>
