--- a/flexbox/index.html
+++ b/flexbox/index.html
@@ -10,6 +10,19 @@
   <body>
     
     <article>
+      <h1>justify-content: flex-start</h1>
+      <section class="container">
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+      </section>
+    </article>
+
+    <article>
       <h1>Lorem</h1>
       <section class="container">
         <div class="box"></div>
