Added an example of the justify content center.

--- a/flexbox/index.html
+++ b/flexbox/index.html
@@ -23,7 +23,7 @@
     </article>
 
     <article>
-      <h1>Lorem</h1>
+      <h1>justify-content: center</h1>
       <section class="container">
         <div class="box"></div>
         <div class="box"></div>
