--- a/flexbox/index.html
+++ b/flexbox/index.html
@@ -35,5 +35,43 @@
       </section>
     </article>
 
+    <article>
+      <h1>justify-content: center</h1>
+      <section class="container">
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+      </section>
+    </article>
+
+    <article>
+      <h1>justify-content: center</h1>
+      <section class="container">
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+      </section>
+    </article>
+
+    <article>
+      <h1>justify-content: center</h1>
+      <section class="container">
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+      </section>
+    </article>
   </body>
 </html>
