Added all 6 relevant justify content types.

--- a/flexbox/index.html
+++ b/flexbox/index.html
@@ -73,5 +73,19 @@
         <div class="box"></div>
       </section>
     </article>
+
+    <article>
+      <h1>justify-content: center</h1>
+      <section class="container">
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+      </section>
+    </article>
+
   </body>
 </html>
