Made the container into a box.

--- a/flexbox/index.html
+++ b/flexbox/index.html
@@ -36,7 +36,7 @@
     </article>
 
     <article>
-      <h1>justify-content: center</h1>
+      <h1>justify-content: flex-end</h1>
       <section class="container">
         <div class="box"></div>
         <div class="box"></div>
@@ -49,7 +49,7 @@
     </article>
 
     <article>
-      <h1>justify-content: center</h1>
+      <h1>justify-content: space-around</h1>
       <section class="container">
         <div class="box"></div>
         <div class="box"></div>
@@ -62,7 +62,7 @@
     </article>
 
     <article>
-      <h1>justify-content: center</h1>
+      <h1>justify-content: space-between</h1>
       <section class="container">
         <div class="box"></div>
         <div class="box"></div>
@@ -75,7 +75,7 @@
     </article>
 
     <article>
-      <h1>justify-content: center</h1>
+      <h1>justify-content: space-evenly</h1>
       <section class="container">
         <div class="box"></div>
         <div class="box"></div>
