--- a/flexbox/index.html
+++ b/flexbox/index.html
@@ -90,5 +90,20 @@
       </section>
     </article>
 
+    <hr>
+    
+    <article>
+      <h1>align-items: flex-start</h1>
+      <section class="container">
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+      </section>
+    </article>
+
   </body>
 </html>
