Added demonstrations of the align-items property. Having trouble with stretch.

--- a/flexbox/index.html
+++ b/flexbox/index.html
@@ -91,9 +91,61 @@
     </article>
 
     <hr>
-    
+
     <article>
       <h1>align-items: flex-start</h1>
+      <section class="container">
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+      </section>
+    </article>
+
+    <article>
+      <h1>align-items: center</h1>
+      <section class="container">
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+      </section>
+    </article>
+
+    <article>
+      <h1>align-items: flex-end</h1>
+      <section class="container">
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+      </section>
+    </article>
+
+    <article>
+      <h1>align-items: baseline</h1>
+      <section class="container">
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+      </section>
+    </article>
+
+    <article>
+      <h1>align-items: stretch</h1>
       <section class="container">
         <div class="box"></div>
         <div class="box"></div>
