Finished flex-grow, about to implement flex-shrink.

--- a/flexbox/index.html
+++ b/flexbox/index.html
@@ -147,13 +147,29 @@
     <article>
       <h1>align-items: stretch</h1>
       <section class="container">
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
+        <div class="box-stretch"></div>
+        <div class="box-stretch"></div>
+        <div class="box-stretch"></div>
+        <div class="box-stretch"></div>
+        <div class="box-stretch"></div>
+        <div class="box-stretch"></div>
+        <div class="box-stretch"></div>
+      </section>
+    </article>
+
+    <hr>
+
+    <article>
+      <h1>flex-grow + flex-shrink</em></h1>
+      <aside>Resize the browser to see the effect. Likewise, the numbers in the boxes represent the values for each property.</aside>
+      <section class="container">
+        <div class="box">4:1</div>
+        <div class="box">3:2</div>
+        <div class="box">2:3</div>
+        <div class="box">1:4</div>
+        <div class="box">2:3</div>
+        <div class="box">3:2</div>
+        <div class="box">4:1</div>
       </section>
     </article>
 
