--- a/flexbox/index.html
+++ b/flexbox/index.html
@@ -160,16 +160,32 @@
     <hr>
 
     <article>
-      <h1>flex-grow + flex-shrink</em></h1>
+      <h1>flex-grow</em></h1>
       <aside>Resize the browser to see the effect. Likewise, the numbers in the boxes represent the values for each property.</aside>
       <section class="container">
-        <div class="box">4:1</div>
-        <div class="box">3:2</div>
-        <div class="box">2:3</div>
-        <div class="box">1:0</div>
-        <div class="box">2:3</div>
-        <div class="box">3:2</div>
-        <div class="box">4:1</div>
+        <div class="box">4</div>
+        <div class="box">3</div>
+        <div class="box">2</div>
+        <div class="box">1</div>
+        <div class="box">2</div>
+        <div class="box">3</div>
+        <div class="box">4</div>
+      </section>
+    </article>
+
+    <hr>
+
+    <article>
+      <h1>flex-shrink</em></h1>
+      <aside>Resize the browser to see the effect. Likewise, the numbers in the boxes represent the values for each property.</aside>
+      <section class="container">
+        <div class="box">4</div>
+        <div class="box">3</div>
+        <div class="box">2</div>
+        <div class="box">1</div>
+        <div class="box">2</div>
+        <div class="box">3</div>
+        <div class="box">4</div>
       </section>
     </article>
 
