--- a/flexbox/index.html
+++ b/flexbox/index.html
@@ -161,15 +161,15 @@
 
     <article>
       <h1>flex-grow</em></h1>
-      <aside>Resize the browser to see the effect. Likewise, the numbers in the boxes represent the values for each property.</aside>
+      <aside>Resize the browser to see the effect. Likewise, the numbers in the boxes represent the values for the property.</aside>
       <section class="container">
-        <div class="box">4</div>
-        <div class="box">3</div>
-        <div class="box">2</div>
         <div class="box">1</div>
+        <div class="box">0</div>
+        <div class="box">0</div>
         <div class="box">2</div>
-        <div class="box">3</div>
-        <div class="box">4</div>
+        <div class="box">0</div>
+        <div class="box">0</div>
+        <div class="box">1</div>
       </section>
     </article>
 
@@ -177,15 +177,15 @@
 
     <article>
       <h1>flex-shrink</em></h1>
-      <aside>Resize the browser to see the effect. Likewise, the numbers in the boxes represent the values for each property.</aside>
+      <aside>Resize the browser to see the effect. Likewise, the numbers in the boxes represent the values for the property.</aside>
       <section class="container">
-        <div class="box">4</div>
-        <div class="box">3</div>
-        <div class="box">2</div>
         <div class="box">1</div>
+        <div class="box">0</div>
+        <div class="box">0</div>
         <div class="box">2</div>
-        <div class="box">3</div>
-        <div class="box">4</div>
+        <div class="box">0</div>
+        <div class="box">0</div>
+        <div class="box">1</div>
       </section>
     </article>
 
