--- a/flexbox/index.html
+++ b/flexbox/index.html
@@ -189,5 +189,21 @@
       </section>
     </article>
 
+    <hr>
+
+    <article>
+      <h1>flex-basis</em></h1>
+      <aside>Resize the browser to see the effect. This is effectively the same as the "flex-grow" section but the width of each box is decided by the <em>flex-basis</em> instead of <em>width</em>.</aside>
+      <section class="container">
+        <div class="box">1</div>
+        <div class="box">0</div>
+        <div class="box">0</div>
+        <div class="box">2</div>
+        <div class="box">0</div>
+        <div class="box">0</div>
+        <div class="box">1</div>
+      </section>
+    </article>
+
   </body>
 </html>
