Added the flex property.

--- a/flexbox/index.html
+++ b/flexbox/index.html
@@ -205,5 +205,21 @@
       </section>
     </article>
 
+    <hr>
+
+    <article>
+      <h1>flex</em></h1>
+      <aside>Refers to the flex shorthand property to specific in one line <em>flex-grow</em>, <em>flex-shrink</em>, and <em>flex-basis</em></aside>
+      <section class="container">
+        <div class="box">1</div>
+        <div class="box">0</div>
+        <div class="box">0</div>
+        <div class="box">2</div>
+        <div class="box">0</div>
+        <div class="box">0</div>
+        <div class="box">1</div>
+      </section>
+    </article>
+
   </body>
 </html>
