Added a demonstration of flex-wrap.

--- a/flexbox/index.html
+++ b/flexbox/index.html
@@ -221,5 +221,45 @@
       </section>
     </article>
 
+    <hr>
+
+    <article>
+      <h1>flex-wrap: wrap</em></h1>
+      <section class="container">
+        <div class="box">a</div>
+        <div class="box">b</div>
+        <div class="box">c</div>
+        <div class="box">d</div>
+        <div class="box">e</div>
+        <div class="box">f</div>
+        <div class="box">g</div>
+      </section>
+    </article>
+
+    <article>
+      <h1>flex-wrap: wrap-reverse</em></h1>
+      <section class="container">
+        <div class="box">a</div>
+        <div class="box">b</div>
+        <div class="box">c</div>
+        <div class="box">d</div>
+        <div class="box">e</div>
+        <div class="box">f</div>
+        <div class="box">g</div>
+      </section>
+    </article>
+
+    <article>
+      <h1>flex-wrap: nowrap</em></h1>
+      <section class="container">
+        <div class="box">a</div>
+        <div class="box">b</div>
+        <div class="box">c</div>
+        <div class="box">d</div>
+        <div class="box">e</div>
+        <div class="box">f</div>
+        <div class="box">g</div>
+      </section>
+    </article>
   </body>
 </html>
