Added demonstration of align-content but stretch is not working.

--- a/flexbox/index.html
+++ b/flexbox/index.html
@@ -90,7 +90,7 @@
       </section>
     </article>
 
-    <hr>
+    <hr><!------------------------------------------------------------------------------------------->
 
     <article>
       <h1>align-items: flex-start</h1>
@@ -157,7 +157,7 @@
       </section>
     </article>
 
-    <hr>
+    <hr><!------------------------------------------------------------------------------------------->
 
     <article>
       <h1>flex-grow</em></h1>
@@ -173,7 +173,7 @@
       </section>
     </article>
 
-    <hr>
+    <hr><!------------------------------------------------------------------------------------------->
 
     <article>
       <h1>flex-shrink</em></h1>
@@ -189,7 +189,7 @@
       </section>
     </article>
 
-    <hr>
+    <hr><!------------------------------------------------------------------------------------------->
 
     <article>
       <h1>flex-basis</em></h1>
@@ -221,10 +221,11 @@
       </section>
     </article>
 
-    <hr>
+    <hr><!------------------------------------------------------------------------------------------->
 
     <article>
       <h1>flex-wrap: wrap</em></h1>
+      <aside>Needs to be resized to show effect.</aside>
       <section class="container">
         <div class="box">a</div>
         <div class="box">b</div>
@@ -238,6 +239,7 @@
 
     <article>
       <h1>flex-wrap: wrap-reverse</em></h1>
+      <aside>Needs to be resized to show effect.</aside>
       <section class="container">
         <div class="box">a</div>
         <div class="box">b</div>
@@ -251,6 +253,7 @@
 
     <article>
       <h1>flex-wrap: nowrap</em></h1>
+      <aside>Needs to be resized to show effect.</aside>
       <section class="container">
         <div class="box">a</div>
         <div class="box">b</div>
@@ -259,6 +262,120 @@
         <div class="box">e</div>
         <div class="box">f</div>
         <div class="box">g</div>
+      </section>
+    </article>
+
+    <hr><!------------------------------------------------------------------------------------------->
+
+    <article>
+      <h1>align-content: flex-start</em></h1>
+      <section class="container">
+        <div class="box">a</div>
+        <div class="box">b</div>
+        <div class="box">c</div>
+        <div class="box">d</div>
+        <div class="box">e</div>
+        <div class="box">f</div>
+        <div class="box">g</div>
+        <div class="box">h</div>
+        <div class="box">i</div>
+        <div class="box">j</div>
+      </section>
+    </article>
+
+    <article>
+      <h1>align-content: center</em></h1>
+      <section class="container">
+        <div class="box">a</div>
+        <div class="box">b</div>
+        <div class="box">c</div>
+        <div class="box">d</div>
+        <div class="box">e</div>
+        <div class="box">f</div>
+        <div class="box">g</div>
+        <div class="box">h</div>
+        <div class="box">i</div>
+        <div class="box">j</div>
+      </section>
+    </article>
+
+    <article>
+      <h1>align-content: flex-end</em></h1>
+      <section class="container">
+        <div class="box">a</div>
+        <div class="box">b</div>
+        <div class="box">c</div>
+        <div class="box">d</div>
+        <div class="box">e</div>
+        <div class="box">f</div>
+        <div class="box">g</div>
+        <div class="box">h</div>
+        <div class="box">i</div>
+        <div class="box">j</div>
+      </section>
+    </article>
+
+    <article>
+      <h1>align-content: space-between</em></h1>
+      <section class="container">
+        <div class="box">a</div>
+        <div class="box">b</div>
+        <div class="box">c</div>
+        <div class="box">d</div>
+        <div class="box">e</div>
+        <div class="box">f</div>
+        <div class="box">g</div>
+        <div class="box">h</div>
+        <div class="box">i</div>
+        <div class="box">j</div>
+      </section>
+    </article>
+
+    <article>
+      <h1>align-content: space-around</em></h1>
+      <section class="container">
+        <div class="box">a</div>
+        <div class="box">b</div>
+        <div class="box">c</div>
+        <div class="box">d</div>
+        <div class="box">e</div>
+        <div class="box">f</div>
+        <div class="box">g</div>
+        <div class="box">h</div>
+        <div class="box">i</div>
+        <div class="box">j</div>
+      </section>
+    </article>
+
+    <article>
+      <h1>align-content: space-evenly</em></h1>
+      <section class="container">
+        <div class="box">a</div>
+        <div class="box">b</div>
+        <div class="box">c</div>
+        <div class="box">d</div>
+        <div class="box">e</div>
+        <div class="box">f</div>
+        <div class="box">g</div>
+        <div class="box">h</div>
+        <div class="box">i</div>
+        <div class="box">j</div>
+      </section>
+    </article>
+
+    <article>
+      <h1>align-content: stretch</em></h1>
+      <section class="container">
+        <div class="box">a</div>
+        <div class="box">b</div>
+        <div class="box">c</div>
+        <div class="box">d</div>
+        <div class="box">e</div>
+        <div class="box">f</div>
+        <div class="box">g</div>
+        <div class="box">h</div>
+        <div class="box">i</div>
+        <div class="box">j</div>
       </section>
     </article>
   </body>
