Demonstrated the use of flex direction.

--- a/flexbox/index.html
+++ b/flexbox/index.html
@@ -378,5 +378,60 @@
         <div class="box">j</div>
       </section>
     </article>
+
+    <hr><!------------------------------------------------------------------------------------------->
+
+    <article>
+      <h1>flex-direction: row</em></h1>
+      <section class="container">
+        <div class="box">a</div>
+        <div class="box">b</div>
+        <div class="box">c</div>
+        <div class="box">d</div>
+        <div class="box">e</div>
+        <div class="box">f</div>
+        <div class="box">g</div>
+      </section>
+    </article>
+
+    <article>
+      <h1>flex-direction: row-reverse</em></h1>
+      <section class="container">
+        <div class="box">a</div>
+        <div class="box">b</div>
+        <div class="box">c</div>
+        <div class="box">d</div>
+        <div class="box">e</div>
+        <div class="box">f</div>
+        <div class="box">g</div>
+      </section>
+    </article>
+
+    <article>
+      <h1>flex-direction: column</em></h1>
+      <section class="container">
+        <div class="box">a</div>
+        <div class="box">b</div>
+        <div class="box">c</div>
+        <div class="box">d</div>
+        <div class="box">e</div>
+        <div class="box">f</div>
+        <div class="box">g</div>
+      </section>
+    </article>
+
+    <article>
+      <h1>flex-direction: column-reverse</em></h1>
+      <section class="container">
+        <div class="box">a</div>
+        <div class="box">b</div>
+        <div class="box">c</div>
+        <div class="box">d</div>
+        <div class="box">e</div>
+        <div class="box">f</div>
+        <div class="box">g</div>
+      </section>
+    </article>
+
   </body>
 </html>
